--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,10 @@ services:
     build: ./cart/
     ports:
       - "8082:8080"
+  loms:
+    image: loms
+    build: ./loms/
+    ports:
+      - "50062:50051"
+      - "8091:8081"
+      - "8095:8085"
