--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,58 @@ services:
       - "50062:50051"
       - "8091:8081"
       - "8095:8085"
+    environment:
+      POSTGRES_DB_HOST: loms-db
+      POSTGRES_DB_SLAVE_HOST: loms-db-slave
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRESQL_REPLICATION_USER: ${POSTGRESQL_REPLICATION_USER}
+      POSTGRESQL_REPLICATION_PASSWORD: ${POSTGRESQL_REPLICATION_PASSWORD}
+    depends_on:
+      loms-db:
+        condition: service_healthy
+
+  loms-db:
+    image: 'docker.io/bitnami/postgresql:11-debian-10'
+    container_name: loms-db
+    environment:
+      POSTGRESQL_USERNAME: ${POSTGRES_USER}
+      POSTGRESQL_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRESQL_PGAUDIT_LOG: ${POSTGRESQL_PGAUDIT_LOG}
+      POSTGRESQL_LOG_HOSTNAME: ${POSTGRESQL_LOG_HOSTNAME}
+      POSTGRESQL_REPLICATION_MODE: ${POSTGRESQL_REPLICATION_MODE}
+      POSTGRESQL_REPLICATION_USER: ${POSTGRESQL_REPLICATION_USER}
+      POSTGRESQL_REPLICATION_PASSWORD: ${POSTGRESQL_REPLICATION_PASSWORD}
+      POSTGRESQL_HOST_AUTH_METHOD: ${POSTGRESQL_HOST_AUTH_METHOD}
+    volumes:
+      - ./pglomsdata/init:/docker-entrypoint-initdb.d/
+    ports:
+      - "5442:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+  loms-db-slave:
+    image: 'docker.io/bitnami/postgresql:11-debian-10'
+    container_name: loms-db-slave
+    ports:
+      - '5433:5432'
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+    depends_on: [ loms-db ]
+    environment:
+      POSTGRESQL_USERNAME: ${POSTGRES_USER}
+      POSTGRESQL_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRESQL_PGAUDIT_LOG: ${POSTGRESQL_PGAUDIT_LOG}
+      POSTGRESQL_LOG_HOSTNAME: ${POSTGRESQL_LOG_HOSTNAME}
+      POSTGRESQL_REPLICATION_MODE: slave
+      POSTGRESQL_REPLICATION_USER: ${POSTGRESQL_REPLICATION_USER}
+      POSTGRESQL_REPLICATION_PASSWORD: ${POSTGRESQL_REPLICATION_PASSWORD}
+      POSTGRESQL_MASTER_HOST: loms-db
+      POSTGRESQL_MASTER_PORT_NUMBER: 5432
+      #POSTGRESQL_REPLICATION_PORT_NUMBER: 5433
+volumes:
+  pglomsdata:
+    driver: local
