--- a/loms/Dockerfile
+++ b/loms/Dockerfile
@@ -19,7 +19,7 @@ COPY --from=builder /app/migrations /loms/migrations
 COPY --from=builder /app/start.sh /start.sh
 COPY --from=builder /app/bin/loms-server /loms-server
 COPY --from=builder /go/bin/goose /bin/goose
-#COPY --from=builder /app/bin/swagger /swagger
+#COPY --from=builder /notifier/bin/swagger /swagger
 COPY --from=builder /app/stock-data.json /stock-data.json
 COPY --from=builder /app/swagger-ui /swagger-ui
 COPY --from=builder /app/api/openapiv2/loms.swagger.json /api/openapiv2/loms.swagger.json
