--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ POSTGRESQL_HOST_AUTH_METHOD=trust
 KAFKA_BROKERS=kafka0:29091,kafka0:29092,kafka0:29093
 KAFKA_TOPIC_NAME=loms.order-events
 KAFKA_CONSUMER_NAME=notifier
+TRACER_URL=http://jaeger:14268/api/traces
+GRAFANA_ADMIN_USER=admin
+GRAFANA_ADMIN_PASSWORD=admin
