--- a/cart/Dockerfile
+++ b/cart/Dockerfile
@@ -2,12 +2,13 @@ FROM golang:1.22-alpine as builder
 
 WORKDIR /app
 
-COPY go.mod go.mod
-COPY go.sum go.sum
+COPY cart/go.mod go.mod
+COPY cart/go.sum go.sum
+COPY ./pkg/ ../pkg
 
 RUN go mod download
 
-COPY . .
+COPY ./cart/ .
 
 RUN go build -o bin/cart-server ./cmd/cart-server
 
