--- a/loms/Makefile
+++ b/loms/Makefile
@@ -29,8 +29,10 @@ sqlc:
 	sqlc generate
 
 migrate-up:
+	goose -dir migrations postgres "postgresql://postgres:password@localhost:5432/loms?sslmode=disable" up
 	goose -dir migrations postgres "postgresql://postgres:password@localhost:5442/loms?sslmode=disable" up
 migrate-reset:
+	goose -dir migrations postgres "postgresql://postgres:password@localhost:5432/loms?sslmode=disable;" reset
 	goose -dir migrations postgres "postgresql://postgres:password@localhost:5442/loms?sslmode=disable" reset
 
 PROTO_PATH:="api/v1"
