--- a/loms/sqlc.yaml
+++ b/loms/sqlc.yaml
@@ -11,3 +11,5 @@ sql:
         emit_json_tags: true
         emit_interface: true
         omit_unused_structs: true
+        rename:
+          column_1: Id
